# microthings

./: .gitignore  .gitmessage  LICENSE  Makefile  netlify.toml  pyproject.toml  readme.md
.github/workflows/: pythonpackage.yml
docs/: index.html
docs/api/: apiblueprint.html  apiblueprint.md  builtins.html  classes.dot  index.html  manifest.json  mything.api.html  mything.domain.html  mything.factory.html  mything.feature.html  mything.html  mything.model.html  packages.dot  sample.html  service-worker.js  services.html  solid.html
docs/api/js/: custom-elements.min.js  custom-preact.browserify.js  custom-preact.js  custom-preact.min.js  mything.hello.js
docs/concepts/12factor/: ch1.xhtml  ch10.xhtml  ch11.xhtml  ch12.xhtml  ch13.xhtml  ch2.xhtml  ch3.xhtml  ch4.xhtml  ch5.xhtml  ch6.xhtml  ch7.xhtml  ch8.xhtml  ch9.xhtml  summary.html
docs/concepts/architecture/: FrameworkPatterns.html
docs/concepts/services/: Best Practices for Designing a Pragmatic RESTful API | Vinay Sahni.html
features/: conftest.py  test_publish_article.py  test_ranks.py
mything/: __init__.py  api.py  apiblueprint.py  domain.py  factory.py  feature.py  model.py
mything/microfrontends/: __init__.py
mything/microfrontends/core/: __init__.py
mything/microfrontends/counter/: CounterFrontend.py  __init__.py
mything/microfrontends/hello/: HelloFrontend.py  __init__.py
mything/microservices/: __init__.py
mything/microservices/hello/: __init__.py
mything/microservices/todos/: __init__.py  requirements.txt
scripts/: get-poetry.py  pyenv-installer.sh  servedocs.py
tests/: test_mything.py
