[tool.poetry]
name = "mything"
version = "0.4.0"
description = "Microfrontends and Microservices with 100% Pure Python and Domain Driven Design . Flask for your processes with SPA HTML5 static js interfaces using generated ES6 modules. https://microthings.netlify.com/"
authors = ["Stephen Daves <contact@stephendaves.com>"]

[tool.poetry.dependencies]
python = ">=3.6,<4.0"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
black = "19.10b0"
transcrypt = "^3.7"
pytest-doctestplus = "^0.5.0"
pylint = "^2.4"
dependencies = "^0.15.0"
pytest-watch = "^4.2"
pytest-bdd = "^3.2"
pytest-splinter = "^2.0.1"
pytest-benchmark = "^3.2.2"
flask = "^1.1.1"
lxml = "^4.4.2"
cssselect = "^1.1.0"
"zope.testbrowser" = "^5.5.1"
mechanize = "^0.4.5"
splinter = {extras = ["zope.testbrowser"], version = "^0.13.0"}

[tool.black]
line-length = 110
skip-string-normalization = true
exclude = "docs"

[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"
